# power_system_backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/common/: cloudinary.py  mailer.py  security.py  utils.py
app/core/: config.py  websocket.py
app/modules/admin/: router.py  schemas.py  service.py
app/modules/articles/: router.py  schemas.py  service.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/bugs/: __init__.py  router.py  schemas.py  service.py
app/modules/faq/: router.py  schemas.py  service.py
app/modules/message_reports/: router.py  schemas.py  service.py
app/modules/messages/: __init__.py  router.py  schemas.py  service.py
app/modules/notifications/: router.py  schemas.py  service.py
app/modules/orders/: __init__.py  router.py  schemas.py  service.py
app/modules/products/: __init__.py  router.py  schemas.py  service.py
app/modules/reports/: router.py  schemas.py  service.py
app/modules/reviews/: __init__.py  router.py  schemas.py  service.py
app/modules/service_applications/: __init__.py  router.py  schemas.py  service.py
app/modules/service_review/: __init__.py  router.py  schemas.py  service.py
app/modules/services/: router.py  schemas.py  service.py
app/modules/settings/: router.py  schemas.py  service.py
app/modules/users/: router.py  schemas.py  service.py
prisma/: schema.prisma
scripts/: admin_seed.py  product_seed.py  seller_seed.py  service_provider_seed.py  service_seed.py  test_product_search.py  user_seed.py
