[project]
name = "jorden"
version = "0.1.0"
description = "FastAPI Backend with Prisma and PostgreSQL"
authors = [
    {name = "Robiul Sunyemon"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi-mail (>=1.6.2,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "firebase-admin (>=7.4.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
